[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelink"
version = "1.0.0"
description = "Self-hosted secure remote access — no static IP, no VPS, no cost"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "HomeLink Contributors" }]
keywords = ["remote-access", "p2p", "self-hosted", "secure", "file-transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.2",
    "click>=8.1",
    "rich>=13.7",
    "argon2-cffi>=23.1",
    "PyNaCl>=1.5",
    "cryptography>=42.0",
    "qrcode[pil]>=7.4",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
homelink = "homelink.cli.main:cli"
homectl   = "homelink.cli.ctl:ctl"

[project.urls]
Homepage   = "https://github.com/psvineet/homelink"
Repository = "https://github.com/psvineet/homelink"

[tool.setuptools.packages.find]
where = ["."]
include = ["homelink*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]
addopts     = "--cov=homelink --cov-report=term-missing --cov-fail-under=40"

[tool.coverage.run]
source = ["homelink"]
omit   = ["tests/*", "init.py"]
